# albums

./: Dockerfile  README.md  build  pyproject.toml
app/: auth.py  config.py  images.py  server.py
app/static/: app.css  app.js  index.html
config/: users.txt
